feat: extend PlayerPreLoginEvent with client device data and clean up deprecations
- PlayerPreLoginEvent now carries the client address, device id, device
  model, device os, platform type and client random id (read unverified
  from the client JWT, documented as untrusted); the old constructor is
  deprecated
- Player gains getDeviceId/getDeviceModel/getDeviceOS/getPlatformType/
  getClientRandomId backed by the verified client chain
- PacketReceiveEvent/PacketHandleEvent fire for pre-login packets and
  expose the session and remote address
- Migrate the login flow to SerializedSkin and add isValid(SerializedSkin)
- Resync AvailableCommandsPacket to online players after register/unregister
- Misc deprecation fixes and null-safety cleanup